# api/openapi/model_manufacturer_all_of.go
@@ -18,8 +18,7 @@ import (
 type ManufacturerAllOf struct {
 	Name *string `json:"name,omitempty"`
 	WebsiteUrl *string `json:"website_url,omitempty"`
-	// Signed URL pointing to the image
-	ImageUrl *string `json:"image_url,omitempty"`
+	ImageUrls *map[string]string `json:"image_urls,omitempty"`
 }
 
 // NewManufacturerAllOf instantiates a new ManufacturerAllOf object
@@ -103,36 +102,36 @@ func (o *ManufacturerAllOf) SetWebsiteUrl(v string) {
 	o.WebsiteUrl = &v
 }
 
-// GetImageUrl returns the ImageUrl field value if set, zero value otherwise.
-func (o *ManufacturerAllOf) GetImageUrl() string {
-	if o == nil || o.ImageUrl == nil {
-		var ret string
+// GetImageUrls returns the ImageUrls field value if set, zero value otherwise.
+func (o *ManufacturerAllOf) GetImageUrls() map[string]string {
+	if o == nil || o.ImageUrls == nil {
+		var ret map[string]string
 		return ret
 	}
-	return *o.ImageUrl
+	return *o.ImageUrls
 }
 
-// GetImageUrlOk returns a tuple with the ImageUrl field value if set, nil otherwise
+// GetImageUrlsOk returns a tuple with the ImageUrls field value if set, nil otherwise
 // and a boolean to check if the value has been set.
-func (o *ManufacturerAllOf) GetImageUrlOk() (*string, bool) {
-	if o == nil || o.ImageUrl == nil {
+func (o *ManufacturerAllOf) GetImageUrlsOk() (*map[string]string, bool) {
+	if o == nil || o.ImageUrls == nil {
 		return nil, false
 	}
-	return o.ImageUrl, true
+	return o.ImageUrls, true
 }
 
-// HasImageUrl returns a boolean if a field has been set.
-func (o *ManufacturerAllOf) HasImageUrl() bool {
-	if o != nil && o.ImageUrl != nil {
+// HasImageUrls returns a boolean if a field has been set.
+func (o *ManufacturerAllOf) HasImageUrls() bool {
+	if o != nil && o.ImageUrls != nil {
 		return true
 	}
 
 	return false
 }
 
-// SetImageUrl gets a reference to the given string and assigns it to the ImageUrl field.
-func (o *ManufacturerAllOf) SetImageUrl(v string) {
-	o.ImageUrl = &v
+// SetImageUrls gets a reference to the given map[string]string and assigns it to the ImageUrls field.
+func (o *ManufacturerAllOf) SetImageUrls(v map[string]string) {
+	o.ImageUrls = &v
 }
 
 func (o ManufacturerAllOf) MarshalJSON() ([]byte, error) {
@@ -143,8 +142,8 @@ func (o ManufacturerAllOf) MarshalJSON() ([]byte, error) {
 	if o.WebsiteUrl != nil {
 		toSerialize["website_url"] = o.WebsiteUrl
 	}
-	if o.ImageUrl != nil {
-		toSerialize["image_url"] = o.ImageUrl
+	if o.ImageUrls != nil {
+		toSerialize["image_urls"] = o.ImageUrls
 	}
 	return json.Marshal(toSerialize)
 }
