# api/openapi/model_product_all_of.go
@@ -25,7 +25,7 @@ type ProductAllOf struct {
 	ManufacturerId *string `json:"manufacturer_id,omitempty"`
 	Status *ProductStatus `json:"status,omitempty"`
 	StockCount *int64 `json:"stock_count,omitempty"`
-	ImageUrls *[]string `json:"image_urls,omitempty"`
+	ImageUrls *[]map[string]string `json:"image_urls,omitempty"`
 }
 
 // NewProductAllOf instantiates a new ProductAllOf object
@@ -288,9 +288,9 @@ func (o *ProductAllOf) SetStockCount(v int64) {
 }
 
 // GetImageUrls returns the ImageUrls field value if set, zero value otherwise.
-func (o *ProductAllOf) GetImageUrls() []string {
+func (o *ProductAllOf) GetImageUrls() []map[string]string {
 	if o == nil || o.ImageUrls == nil {
-		var ret []string
+		var ret []map[string]string
 		return ret
 	}
 	return *o.ImageUrls
@@ -298,7 +298,7 @@ func (o *ProductAllOf) GetImageUrls() []string {
 
 // GetImageUrlsOk returns a tuple with the ImageUrls field value if set, nil otherwise
 // and a boolean to check if the value has been set.
-func (o *ProductAllOf) GetImageUrlsOk() (*[]string, bool) {
+func (o *ProductAllOf) GetImageUrlsOk() (*[]map[string]string, bool) {
 	if o == nil || o.ImageUrls == nil {
 		return nil, false
 	}
@@ -314,8 +314,8 @@ func (o *ProductAllOf) HasImageUrls() bool {
 	return false
 }
 
-// SetImageUrls gets a reference to the given []string and assigns it to the ImageUrls field.
-func (o *ProductAllOf) SetImageUrls(v []string) {
+// SetImageUrls gets a reference to the given []map[string]string and assigns it to the ImageUrls field.
+func (o *ProductAllOf) SetImageUrls(v []map[string]string) {
 	o.ImageUrls = &v
 }
 
